--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1112,6 +1112,7 @@ workflows:
           parallelism: 6
           xdist: 1
       - win:
+          executor: server-2019-cuda
           matrix:
             parameters:
               python_version_major: [ 3 ]
