--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -79,6 +79,9 @@ parameters:
   manual_nightly_execute_shard_kfp:
     type: boolean
     default: false
+  manual_nightly_execute_shard_win_standalone_gpu:
+    type: boolean
+    default: false
   wandb_server_tag:
     type: string
     default: "master"
@@ -338,39 +341,45 @@ jobs:
       executor_size:
         type: string
         default: "large"  # could only be "medium" for "server-2019-cuda"
+      execute:
+        type: boolean
+        default: true
     executor:
       name: win/<< parameters.machine_executor >>
       size: << parameters.executor_size >>
     parallelism: << parameters.parallelism >>
     steps:
       - checkout
-      - run:
-          name: Install python dependencies
-          command: |
-            pip install tox==<< pipeline.parameters.tox_version >>
-      - run:
-          name: Temporary conda hack
-          shell: bash.exe
-          command: |
-            cp /c/tools/miniconda3/python* /c/tools/miniconda3/lib/venv/scripts/nt/
       - when:
-          condition:
-            equal: [ "server-2019-cuda", << parameters.machine_executor >> ]
+          condition: << parameters.execute >>
           steps:
             - run:
-                name: Update tox.ini on a GPU machine to install the proper pytorch version
+                name: Install python dependencies
                 command: |
-                  sed -i -e 's/whl\/cpu/whl\/cu113/g' tox.ini
-      - run:
-          name: Run tests
-          shell: bash.exe
-          command: |
-            echo $GCLOUD_SERVICE_KEY > key.json
-            gcloud auth activate-service-account --key-file=key.json
-            yes | gcloud auth configure-docker
-            DATE=$(date -u +%Y%m%d) CI_PYTEST_PARALLEL=<< parameters.xdist >> CI_PYTEST_SPLIT_ARGS="--splits $CIRCLE_NODE_TOTAL --group $(( $CIRCLE_NODE_INDEX + 1 ))" tox -v -e << parameters.toxenv >>
-          no_output_timeout: 10m
-      - save-test-results
+                  pip install tox==<< pipeline.parameters.tox_version >>
+            - run:
+                name: Temporary conda hack
+                shell: bash.exe
+                command: |
+                  cp /c/tools/miniconda3/python* /c/tools/miniconda3/lib/venv/scripts/nt/
+            - when:
+                condition:
+                  equal: [ "server-2019-cuda", << parameters.machine_executor >> ]
+                steps:
+                  - run:
+                      name: Update tox.ini on a GPU machine to install the proper pytorch version
+                      command: |
+                        sed -i -e 's/whl\/cpu/whl\/cu113/g' tox.ini
+            - run:
+                name: Run tests
+                shell: bash.exe
+                command: |
+                  echo $GCLOUD_SERVICE_KEY > key.json
+                  gcloud auth activate-service-account --key-file=key.json
+                  yes | gcloud auth configure-docker
+                  DATE=$(date -u +%Y%m%d) CI_PYTEST_PARALLEL=<< parameters.xdist >> CI_PYTEST_SPLIT_ARGS="--splits $CIRCLE_NODE_TOTAL --group $(( $CIRCLE_NODE_INDEX + 1 ))" tox -v -e << parameters.toxenv >>
+                no_output_timeout: 10m
+            - save-test-results
 
   mac:
     parameters:
@@ -932,6 +941,20 @@ workflows:
           context: slack-secrets
           notify_on_failure: true
       #
+      # standalone GPU tests on Windows
+      #
+      - win:
+          machine_executor: "server-2019-cuda"
+          executor_size: "medium"
+          matrix:
+            parameters:
+              python_version_major: [ 3 ]
+              python_version_minor: [ 9 ]
+          name: "func-s_standalone_gpu-win-py<<matrix.python_version_major>><<matrix.python_version_minor>>"
+          toxenv: "standalone-gpu-py<<matrix.python_version_major>><<matrix.python_version_minor>>"
+          parallelism: 2
+          xdist: 1
+      #
       # standalone tests on gke
       #
       - slack_notify:
@@ -1114,18 +1137,6 @@ workflows:
           toxenv: "func-s_base-py<<matrix.python_version_major>><<matrix.python_version_minor>>"
           parallelism: 6
           xdist: 1
-      # standalone GPU tests
-      - win:
-          machine_executor: "server-2019-cuda"
-          executor_size: "medium"
-          matrix:
-            parameters:
-              python_version_major: [ 3 ]
-              python_version_minor: [ 9 ]
-          name: "func-s_standalone_gpu-win-py<<matrix.python_version_major>><<matrix.python_version_minor>>"
-          toxenv: "standalone-gpu-py<<matrix.python_version_major>><<matrix.python_version_minor>>"
-          parallelism: 2
-          xdist: 1
       #
       # Unit tests with pytest on Windows and MacOS, using real wandb server
       #
@@ -1220,6 +1231,21 @@ workflows:
           execute: << pipeline.parameters.manual_nightly_execute_shard_kfp >>
           context: slack-secrets
           notify_on_failure: << pipeline.parameters.manual_nightly_slack_notify >>
+      #
+      # standalone GPU tests on Windows
+      #
+      - win:
+          machine_executor: "server-2019-cuda"
+          executor_size: "medium"
+          execute: << pipeline.parameters.manual_nightly_execute_shard_win_standalone_gpu >>
+          matrix:
+            parameters:
+              python_version_major: [ 3 ]
+              python_version_minor: [ 9 ]
+          name: "func-s_standalone_gpu-win-py<<matrix.python_version_major>><<matrix.python_version_minor>>"
+          toxenv: "standalone-gpu-py<<matrix.python_version_major>><<matrix.python_version_minor>>"
+          parallelism: 2
+          xdist: 1
       #
       # stanalone tests on gke
       #
