--- a/wandb/sdk/launch/sweeps/Dockerfile.scheduler.sweep
+++ b/wandb/sdk/launch/sweeps/Dockerfile.scheduler.sweep
@@ -1,5 +1,6 @@
 FROM python:3.9-slim-bullseye
 LABEL maintainer='Weights & Biases <support@wandb.com>'
+LABEL version="0.1"
 
 # install git
 RUN apt-get update && apt-get upgrade -y \
@@ -10,9 +11,9 @@ RUN apt-get update && apt-get upgrade -y \
 # required pip packages
 RUN pip install --no-cache-dir wandb[launch]
 # user set up
-RUN useradd -m -s /bin/bash --create-home --no-log-init -u 1000 -g 0 launch_agent
-USER launch_agent
-WORKDIR /home/launch_agent
-RUN chown -R launch_agent /home/launch_agent
+RUN useradd -m -s /bin/bash --create-home --no-log-init -u 1000 -g 0 wandb_scheduler
+USER wandb_scheduler
+WORKDIR /home/wandb_scheduler
+RUN chown -R wandb_scheduler /home/wandb_scheduler
 
-ENTRYPOINT ["wandb", "launch-agent"]
+ENTRYPOINT ["wandb", "scheduler"]
