Fix yea test, add git to func tests

--- a/tox.ini
+++ b/tox.ini
@@ -403,6 +403,8 @@ extras =
     func-s_grpc-py{36,37,38,39,310}: grpc
 whitelist_externals =
     mkdir
+    git
+    sh
 commands =
     mkdir -p test-results
     func-s_base-py{36,37,38,39,310}: yea {env:CI_PYTEST_SPLIT_ARGS:} --strict --shard default run {posargs:--all}
