--- a/tox.ini
+++ b/tox.ini
@@ -361,11 +361,11 @@ whitelist_externals =
     bash.exe
 commands =
     bash.exe -c 'mkdir -p cover-results'
-    bash.exe -c 'C:/Users/circleci/project/.tox/wincovercircle/Scripts/python -m coverage combine C:/Users/circleci/project/.tox/py39/.coverage*'
-    bash.exe -c 'C:/Users/circleci/project/.tox/wincovercircle/Scripts/python -m coverage xml'
+    bash.exe -c '/c/Users/circleci/project/.tox/wincovercircle/Scripts/python.exe -m coverage combine /c/Users/circleci/project/.tox/py39/.coverage*'
+    bash.exe -c '/c/Users/circleci/project/.tox/wincovercircle/Scripts/python.exe -m coverage xml'
     bash.exe -c 'cp .coverage coverage.xml cover-results/'
-    bash.exe -c 'C:/Users/circleci/project/.tox/wincovercircle/Scripts/python -m coverage report --ignore-errors --skip-covered --omit "wandb/vendor/*"'
-    bash.exe -c 'C:/Users/circleci/project/.tox/wincovercircle/Scripts/python -m codecov -e TOXENV -F unittest'
+    bash.exe -c '/c/Users/circleci/project/.tox/wincovercircle/Scripts/python.exe -m coverage report --ignore-errors --skip-covered --omit "wandb/vendor/*"'
+    bash.exe -c '/c/Users/circleci/project/.tox/wincovercircle/Scripts/python.exe -m codecov -e TOXENV -F unittest'
 
 [testenv:cover]
 skip_install = true
