--- a/tox.ini
+++ b/tox.ini
@@ -1,15 +1,17 @@
 [tox]
 minversion=3.24.0
-envlist = black,
-          mypy,
-          flake8,
-          docstrings,
-          py{36,37,38,39,launch},
-          func-s_{base,sklearn,metaflow,tf115,tf21,tf25,tf26,ray112,ray2,service,docs,
-                  imports{1,2,3,4,5,6,7,8,9,10,11},noml,grpc}-py37,
-          standalone-{cpu,gpu,tpu,local}-py38,
-          func-cover,
-          cover
+envlist=
+    black,
+    isort,
+    mypy,
+    flake8,
+    docstrings,
+    py{36,37,38,39,launch},
+    func-s_{base,sklearn,metaflow,tf115,tf21,tf25,tf26,ray112,ray2,service,docs,
+            imports{1,2,3,4,5,6,7,8,9,10,11},noml,grpc}-py37,
+    standalone-{cpu,gpu,tpu,local}-py38,
+    func-cover,
+    cover
 
 [base]
 setenv =
@@ -170,7 +172,7 @@ deps =
     pep8-naming
     flake8-fixme
     flake8-typing-imports>=1.1
-    flake8-import-order>=0.9
+    ; flake8-import-order>=0.9
 commands =
     flake8 --append-config={toxinidir}/.flake8-base {posargs}
 
@@ -218,6 +220,26 @@ deps=
     pycobertura
 commands=
     pycobertura show --format text mypy-results/cobertura.xml
+
+[isort]
+deps=
+    isort
+
+[testenv:isort-check]
+basepython = python3
+skip_install = true
+deps=
+    {[isort]deps}
+commands=
+    isort --check wandb/ tests/ tools/
+
+[testenv:isort-format]
+basepython = python3
+skip_install = true
+deps=
+    {[isort]deps}
+commands=
+    isort wandb/ tests/ tools/
 
 [black]
 deps=
