--- a/tox.ini
+++ b/tox.ini
@@ -231,7 +231,9 @@ skip_install = true
 deps=
     {[isort]deps}
 commands=
-    isort --check wandb/ tests/ tools/
+    isort --check wandb/
+    isort --check tests/
+    isort --check tools/
 
 [testenv:isort-format]
 basepython = python3
@@ -239,7 +241,9 @@ skip_install = true
 deps=
     {[isort]deps}
 commands=
-    isort wandb/ tests/ tools/
+    isort wandb/
+    isort tests/
+    isort tools/
 
 [black]
 deps=
