--- a/tox.ini
+++ b/tox.ini
@@ -230,9 +230,7 @@ skip_install = true
 deps=
     {[isort]deps}
 commands=
-    isort --check wandb/
-    isort --check tests/
-    isort --check tools/
+    isort --check --resolve-all-configs --config-root {toxinidir} {toxinidir}
 
 [testenv:isort-format]
 basepython = python3
@@ -240,9 +238,7 @@ skip_install = true
 deps=
     {[isort]deps}
 commands=
-    isort wandb/
-    isort tests/
-    isort tools/
+    isort --resolve-all-configs --config-root {toxinidir} {toxinidir}
 
 [black]
 deps=
