Vendor `nvidia-ml-py-11.515.48` (#4109)
* vendor nvidia-ml-py-11.515.48

--- a/tox.ini
+++ b/tox.ini
@@ -84,7 +84,7 @@ passenv =
 commands =
     s_nb: ipython kernel install --user --name=wandb_python
     mkdir -p test-results
-    python -m pytest {env:CI_PYTEST_SPLIT_ARGS:} -n={env:CI_PYTEST_PARALLEL:{env:WB_UNIT_PARALLEL:4}} --durations=20 --junitxml=test-results/junit.xml --cov-config=.coveragerc --cov --cov-report= --no-cov-on-fail {posargs:tests/unit_tests_old/tests_{env:WB_UNIT_SHARD}/}
+    python -m pytest {env:CI_PYTEST_SPLIT_ARGS:} -n={env:CI_PYTEST_PARALLEL:{env:WB_UNIT_PARALLEL:4}} --durations=20 --junitxml=test-results/junit.xml --cov-config=.coveragerc --cov --cov-report= --no-cov-on-fail --timeout 300 {posargs:tests/unit_tests_old/tests_{env:WB_UNIT_SHARD}/}
 
 [testenv:dev]
 usedevelop = true
@@ -384,11 +384,11 @@ whitelist_externals =
     bash.exe
 commands =
     bash.exe -c 'mkdir -p cover-results'
-    bash.exe -c 'C:/Users/circleci/project/.tox/wincovercircle/Scripts/python -m coverage combine C:/Users/circleci/project/.tox/py37/.coverage*'
-    bash.exe -c 'C:/Users/circleci/project/.tox/wincovercircle/Scripts/python -m coverage xml'
+    bash.exe -c '~/project/.tox/wincovercircle/Scripts/python.exe -m coverage combine ~/project/.tox/py39/.coverage*'
+    bash.exe -c '~/project/.tox/wincovercircle/Scripts/python.exe -m coverage xml'
     bash.exe -c 'cp .coverage coverage.xml cover-results/'
-    bash.exe -c 'C:/Users/circleci/project/.tox/wincovercircle/Scripts/python -m coverage report --ignore-errors --skip-covered --omit "wandb/vendor/*"'
-    bash.exe -c 'C:/Users/circleci/project/.tox/wincovercircle/Scripts/python -m codecov -e TOXENV -F unittest'
+    bash.exe -c '~/project/.tox/wincovercircle/Scripts/python.exe -m coverage report --ignore-errors --skip-covered --omit "wandb/vendor/*"'
+    bash.exe -c '~/project/.tox/wincovercircle/Scripts/python.exe -m codecov -e TOXENV -F unittest'
 
 [testenv:cover]
 skip_install = true
