--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -830,7 +830,10 @@ jobs:
                   done
 
                   # grab result data
+                  echo "Grab results"
+                  echo "DEBUG cp << parameters.pod_name >>:/home/sdk/wandb/test-results"
                   kublectl cp << parameters.pod_name >>:/home/sdk/wandb/test-results .
+                  echo "Grab results done"
 
                   kubectl logs << parameters.pod_name >>
                   logs=`kubectl logs << parameters.pod_name >>`
