--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -830,10 +830,10 @@ jobs:
                   done
 
                   # grab result data
-                  echo "Grab results"
-                  echo "DEBUG cp << parameters.pod_name >>:/home/sdk/wandb/test-results"
-                  kubectl cp << parameters.pod_name >>:/home/sdk/wandb/test-results .
-                  echo "Grab results done"
+                  # echo "Grab results"
+                  # echo "DEBUG cp << parameters.pod_name >>:/home/sdk/wandb/test-results"
+                  # kubectl cp << parameters.pod_name >>:/home/sdk/wandb/test-results .
+                  # echo "Grab results done"
 
                   kubectl logs << parameters.pod_name >>
                   logs=`kubectl logs << parameters.pod_name >>`
