--- a/tox.ini
+++ b/tox.ini
@@ -447,6 +447,12 @@ commands =
     func-s_noml-py{36,37,38,39,310}: yea {env:CI_PYTEST_SPLIT_ARGS:} --strict --shard noml run {posargs:--all}
     func-s_kfp-py{37}: yea {env:CI_PYTEST_SPLIT_ARGS:} --strict -p wandb:mockserver-bind=0.0.0.0 -p wandb:mockserver-host=__auto__ --shard kfp run {posargs:--all}
 
+[testenv:store]
+whitelist_externals =
+    cp
+commands =
+    cp -rp test-results /tmp/store/test-results
+
 [testenv:func-cover]
 skip_install = true
 deps =
