--- a/tox.ini
+++ b/tox.ini
@@ -449,8 +449,13 @@ commands =
 
 [testenv:store]
 whitelist_externals =
+    mkdir
+    ls
     cp
 commands =
+    ls /
+    ls /tmp
+    mkdir -p /tmp/store/test-results
     cp -rp test-results /tmp/store/test-results
 
 [testenv:func-cover]
