--- a/tox.ini
+++ b/tox.ini
@@ -452,11 +452,14 @@ whitelist_externals =
     mkdir
     ls
     cp
+    bash
 commands =
+    bash -c pwd
+    ls -l
     ls /
     ls /tmp
-    mkdir -p /tmp/store/test-results
-    cp -rp test-results /tmp/store/test-results
+    mkdir -p /wandb-store/test-results
+    cp -rp test-results /wandb-store/test-results
 
 [testenv:func-cover]
 skip_install = true
