--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -830,10 +830,17 @@ jobs:
                   done
 
                   # grab result data
-                  # echo "Grab results"
-                  # echo "DEBUG cp << parameters.pod_name >>:/home/sdk/wandb/test-results"
+                  echo "Grab results"
+                  echo "DEBUG cp << parameters.pod_name >>:/home/sdk/wandb/test-results"
+                  kubectl describe po
+                  kubectl describe pv
+                  kubectl describe pvc
+                  bash -c pwd
+                  ls -l
+                  kubectl cp << parameters.pod_name >>:pv-demo:test-results .
+                  ls -l
                   # kubectl cp << parameters.pod_name >>:/home/sdk/wandb/test-results .
-                  # echo "Grab results done"
+                  echo "Grab results done"
 
                   kubectl logs << parameters.pod_name >>
                   logs=`kubectl logs << parameters.pod_name >>`
