--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -844,6 +844,31 @@ jobs:
                   kubectl describe pv
                   kubectl describe pvc
                   echo "hello2"
+                  kubectl describe po
+                  echo "hello33"
+                  kubectl get pods | grep attachpod
+                  echo "hello44"
+
+                  while true; do
+                    kubectl get pods
+                    pod_state=$(kubectl get pods | grep attachpod
+                    if [ "$(echo "$pod_state" | grep -c 'Running')" -eq "1" ]; then
+                      echo "Pod for << parameters.image_name >> is running"
+                      break
+                    elif [ "$(echo "$pod_state" | grep -c 'Completed')" -eq "1" ]; then
+                      echo "Pod for << parameters.image_name >> has completed"
+                      break
+                    elif [ "$(echo "$pod_state" | grep -c 'Error')" -eq "1" ] || [ "$(kubectl get pods | grep -c 'CrashLoopBackOff')" -eq "1" ]; then
+                      echo "Pod for << parameters.image_name >> is in an error state"
+                      kubectl logs << parameters.pod_name >>
+                      exit 1
+                    fi
+                    echo "Sleeping for << parameters.sleep_time >> seconds"
+                    echo
+                    sleep << parameters.sleep_time >>
+                  done
+
+                  echo "hello3"
                   kubectl cp attachpod:/wandb-store/test-results .
                   echo "cp_done"
                   kubectl delete pod attachpod
