--- a/tox.ini
+++ b/tox.ini
@@ -447,7 +447,7 @@ commands =
     func-s_noml-py{36,37,38,39,310}: yea {env:CI_PYTEST_SPLIT_ARGS:} --strict --shard noml run {posargs:--all}
     func-s_kfp-py{37}: yea {env:CI_PYTEST_SPLIT_ARGS:} --strict -p wandb:mockserver-bind=0.0.0.0 -p wandb:mockserver-host=__auto__ --shard kfp run {posargs:--all}
 
-[testenv:store]
+[testenv:pod-store]
 whitelist_externals =
     mkdir
     cp
