--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -836,7 +836,7 @@ jobs:
                   kubectl create -f << parameters.path >>/attach.yaml
                   while true; do
                     kubectl get pods
-                    pod_state=$(kubectl get pods | grep attach-pod)
+                    pod_state=$(kubectl get pods | grep cpu-pod-attach-pod)
                     if [ "$(echo "$pod_state" | grep -c 'Running')" -eq "1" ]; then
                       echo "Attach Pod for << parameters.image_name >> is running"
                       break
@@ -845,7 +845,7 @@ jobs:
                       break
                     elif [ "$(echo "$pod_state" | grep -c 'Error')" -eq "1" ] || [ "$(kubectl get pods | grep -c 'CrashLoopBackOff')" -eq "1" ]; then
                       echo "Attach Pod for << parameters.image_name >> is in an error state"
-                      kubectl logs attach-pod
+                      kubectl logs cpu-pod-attach-pod
                       echo "About to exit"
                       exit 1
                     fi
@@ -854,14 +854,14 @@ jobs:
                     sleep << parameters.sleep_time >>
                   done
                   echo "Copy results from pod..."
-                  mkdir results/<< parameters.pod_name >>
-                  kubectl cp attach-pod:/wandb-store/test-results results/<< parameters.pod_name >>
+                  mkdir -p results/<< parameters.pod_name >>
+                  kubectl cp cpu-pod-attach-pod:/wandb-store/test-results results/<< parameters.pod_name >>
                 no_output_timeout: "10m"
             - run:
                 # todo: make getting the exit_code more robust: add check for "commands succeeded"
                 name: "Get pod logs and parse exit code"
                 command: |
-                  kubectl delete pod attach-pod
+                  kubectl delete pod cpu-pod-attach-pod
                   kubectl logs << parameters.pod_name >>
                   logs=`kubectl logs << parameters.pod_name >>`
                   exit_code=`echo $(echo $logs | grep -c "commands failed")`
