--- a/tests/standalone_tests/shards/gke_cpu/Dockerfile
+++ b/tests/standalone_tests/shards/gke_cpu/Dockerfile
@@ -46,4 +46,4 @@ RUN PATH=/home/sdk/.local/bin:$PATH
 WORKDIR /wandb/wandb
 ENV DATE=$UTC_DATE
 #CMD ["tail", "-f", "/dev/null"]
-CMD ["python", "-m", "tox", "-v", "-e", "standalone-cpu-py38,store"]
+CMD ["python", "-m", "tox", "-v", "-e", "standalone-cpu-py38,pod-store"]
