build(sdk): update protobuf requirement to >=4.21.1

--- a/tox.ini
+++ b/tox.ini
@@ -135,9 +135,9 @@ whitelist_externals =
     diff
 deps =
     -r{toxinidir}/requirements.txt
-    grpcio==1.40.0
-    grpcio-tools==1.40.0
-    mypy-protobuf==2.4
+    grpcio==1.49.0
+    grpcio-tools==1.49.0
+    mypy-protobuf==3.3.0
 changedir={toxinidir}/wandb/proto
 commands=
     rm -rf {toxinidir}/wandb/proto_check/
@@ -150,9 +150,9 @@ basepython=python3
 skip_install = false
 deps =
     -r{toxinidir}/requirements.txt
-    grpcio==1.40.0
-    grpcio-tools==1.40.0
-    mypy-protobuf==2.4
+    grpcio==1.49.0
+    grpcio-tools==1.49.0
+    mypy-protobuf==3.3.0
 changedir={toxinidir}/wandb/proto
 commands=
     python wandb_internal_codegen.py
@@ -161,7 +161,7 @@ commands=
 deps =
     flake8
     flake8-colors
-    grpcio==1.40.0
+    grpcio==1.49.0
 
 [testenv:flake8]
 basepython=python3
@@ -206,7 +206,7 @@ deps=
     types-click==7.1.8
     mypy==0.971
     lxml
-    grpcio==1.40.0
+    grpcio
 setenv =
     MYPYPATH = {toxinidir}
 commands=
