--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -23,6 +23,7 @@ jobs:
             refactor
             perf
             test
+            build
             ci
             chore
             revert
