--- a/tox.ini
+++ b/tox.ini
@@ -229,7 +229,7 @@ commands=
 
 [isort]
 deps=
-    isort
+    isort --resolve-all-configs --config-root {toxinidir} {toxinidir}
 
 [testenv:isort-check]
 basepython = python3
