fix a couple things

--- a/tox.ini
+++ b/tox.ini
@@ -229,6 +229,8 @@ commands=
 
 [isort]
 deps=
+    isort
+commands=
     isort --resolve-all-configs --config-root {toxinidir} {toxinidir}
 
 [testenv:isort-check]
