feat(media): add class methods to Object3D, add scene camera and bounding box confidence scores (#4319)
* feat(media): add class methods to Object3D, add scene camera and bounding box confidence scores

Co-authored-by: Stephen Sisk <ssisk@users.noreply.github.com>

--- a/tox.ini
+++ b/tox.ini
@@ -230,6 +230,8 @@ commands=
 [isort]
 deps=
     isort
+commands=
+    isort --resolve-all-configs --config-root {toxinidir} {toxinidir}
 
 [testenv:isort-check]
 basepython = python3
