follow standard keras callback arg convention; fix type annotations and linting

--- a/tox.ini
+++ b/tox.ini
@@ -166,8 +166,7 @@ commands=
 
 [flake8base]
 deps =
-    flake8
-    flake8-colors
+    flake8>=5.0.0
     grpcio>=1.46.3
 
 [testenv:flake8]
@@ -180,7 +179,7 @@ deps =
     flake8-fixme
     flake8-typing-imports>=1.1
 commands =
-    flake8 --append-config={toxinidir}/.flake8-base {posargs}
+    flake8 --append-config={toxinidir}/.flake8-base --color=always {posargs}
 
 [testenv:docstrings]
 basepython=python3
@@ -230,8 +229,6 @@ commands=
 [isort]
 deps=
     isort
-commands=
-    isort --resolve-all-configs --config-root {toxinidir} {toxinidir}
 
 [testenv:isort-check]
 basepython = python3
@@ -304,7 +301,7 @@ ignore =
     DAR103,
 # select = C,E,F,W,B,B901,I,N
 max-complexity = 18
-format = ${cyan}%(path)s${reset}:${yellow_bold}%(row)d${reset}:${green_bold}%(col)d${reset}: ${red_bold}%(code)s${reset} %(text)s
+;format = ${cyan}%(path)s${reset}:${yellow_bold}%(row)d${reset}:${green_bold}%(col)d${reset}: ${red_bold}%(code)s${reset} %(text)s
 # docstring checking
 docstring-convention = all
 docstring-style = google
