chore(sdk): use the gear emoji to denote Dev changes in the changelog/release notes

--- a/.github/release.yml
+++ b/.github/release.yml
@@ -18,7 +18,7 @@ changelog:
     - title: ":books: Docs"
       labels:
         - cc-docs
-    - title: ":toolbox: Dev"
+    - title: ":gear: Dev"
       labels:
         - cc-build
         - cc-ci
