add 3.11-rc tests to the main workflow as well

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -213,8 +213,8 @@ jobs:
         type: integer
         default: 3
       python_version_minor:
-        type: string
-        default: 7
+        type: string  # this is to allow -rc suffixes
+        default: "7"
       toxenv:
         type: string
       shard:
@@ -267,7 +267,7 @@ jobs:
         default: 3
       python_version_minor:
         type: string
-        default: 7
+        default: "7"
       toxenv:
         type: string
       notify_on_failure:
@@ -326,7 +326,7 @@ jobs:
         default: 3
       python_version_minor:
         type: string
-        default: 9
+        default: "9"
       toxenv:
         type: string
       parallelism:
@@ -393,7 +393,7 @@ jobs:
         default: 3
       python_version_minor:
         type: string
-        default: 7
+        default: "7"
       toxenv:
         type: string
       parallelism:
@@ -997,7 +997,7 @@ workflows:
           matrix:
             parameters:
               python_version_major: [ 3 ]
-              python_version_minor: [ 9 ]
+              python_version_minor: [ "9" ]
           name: "func-s_standalone_gpu-win-py<<matrix.python_version_major>><<matrix.python_version_minor>>"
           toxenv: "standalone-gpu-py<<matrix.python_version_major>><<matrix.python_version_minor>>"
           parallelism: 2
@@ -1094,7 +1094,7 @@ workflows:
       #
       - tox-base:
           name: "code-check"
-          python_version_minor: 8
+          python_version_minor: "8"
           toxenv: "protocheck3,protocheck4,generatecheck,codecovcheck,mypy,mypy-report,pyupgrade,black,isort-check,flake8,docstrings"
       #
       # Unit tests with pytest on Linux, using real wandb server
@@ -1104,7 +1104,7 @@ workflows:
             parameters:
               python_version_major: [3]
               # todo: replace 3.11-rc with 3.11 when it's released on 2022-10-24
-              python_version_minor: [6, 7, 8, 9, 10, 11-rc]
+              python_version_minor: ["6", "7", "8", "9", "10", "11-rc"]
           name: "unit-s_base-lin-py<<matrix.python_version_major>><<matrix.python_version_minor>>"
           toxenv: "py<<matrix.python_version_major>><<matrix.python_version_minor>>,covercircle"
       #
@@ -1115,7 +1115,7 @@ workflows:
             parameters:
               python_version_major: [3]
               # todo: replace 3.11-rc with 3.11 when it's released on 2022-10-24
-              python_version_minor: [6, 7, 8, 9, 10, 11-rc]
+              python_version_minor: ["6", "7", "8", "9", "10", "11-rc"]
           name: "unit-s_base_mock_server-lin-py<<matrix.python_version_major>><<matrix.python_version_minor>>"
           toxenv: "py<<matrix.python_version_major>><<matrix.python_version_minor>>,covercircle"
       #
@@ -1125,7 +1125,7 @@ workflows:
           matrix:
             parameters:
               python_version_major: [3]
-              python_version_minor: [7]
+              python_version_minor: ["7"]
               shard:
                 - "base"
           name: "func-s_<<matrix.shard>>-lin-py<<matrix.python_version_major>><<matrix.python_version_minor>>"
@@ -1138,7 +1138,7 @@ workflows:
           matrix:
             parameters:
               python_version_major: [3]
-              python_version_minor: [7]
+              python_version_minor: ["7"]
               shard:
                 - "sklearn"
                 - "metaflow"
@@ -1161,7 +1161,7 @@ workflows:
           matrix:
             parameters:
               python_version_major: [3]
-              python_version_minor: [7]
+              python_version_minor: ["7"]
               shard:
                 - "imports1"
                 - "imports2"
@@ -1184,7 +1184,7 @@ workflows:
           matrix:
             parameters:
               python_version_major: [3]
-              python_version_minor: [9]
+              python_version_minor: ["9"]
           name: "func-s_base-win-py<<matrix.python_version_major>><<matrix.python_version_minor>>"
           toxenv: "func-s_base-py<<matrix.python_version_major>><<matrix.python_version_minor>>"
           parallelism: 6
@@ -1196,14 +1196,14 @@ workflows:
           matrix:
             parameters:
               python_version_major: [3]
-              python_version_minor: [9]
+              python_version_minor: ["9"]
           name: "unit-s_base-win-py<<matrix.python_version_major>><<matrix.python_version_minor>>"
           toxenv: "py<<matrix.python_version_major>><<matrix.python_version_minor>>,wincovercircle -- --timeout 300 tests/unit_tests"
       - mac:
           matrix:
             parameters:
               python_version_major: [3]
-              python_version_minor: [9]
+              python_version_minor: ["9"]
           name: "unit-s_base_mock_server-mac-py<<matrix.python_version_major>><<matrix.python_version_minor>>"
           toxenv: "py<<matrix.python_version_major>><<matrix.python_version_minor>>,covercircle"
       #
@@ -1220,14 +1220,14 @@ workflows:
           matrix:
             parameters:
               python_version_major: [3]
-              python_version_minor: [6]
+              python_version_minor: ["6"]
           name: "unit-s_nb-lin-py<<matrix.python_version_major>><<matrix.python_version_minor>>"
           toxenv: "unit-s_nb-py<<matrix.python_version_major>><<matrix.python_version_minor>>,unit-covercircle"
       - win:
           matrix:
             parameters:
               python_version_major: [3]
-              python_version_minor: [9]
+              python_version_minor: ["9"]
           name: "unit-s_nb-win-py<<matrix.python_version_major>><<matrix.python_version_minor>>"
           toxenv: "unit-s_nb-py<<matrix.python_version_major>><<matrix.python_version_minor>>"
           parallelism: 1
@@ -1236,7 +1236,7 @@ workflows:
           matrix:
             parameters:
               python_version_major: [3]
-              python_version_minor: [9]
+              python_version_minor: ["9"]
           name: "unit-s_nb-mac-py<<matrix.python_version_major>><<matrix.python_version_minor>>"
           toxenv: "unit-s_nb-py<<matrix.python_version_major>><<matrix.python_version_minor>>"
           parallelism: 1
@@ -1293,7 +1293,7 @@ workflows:
           matrix:
             parameters:
               python_version_major: [ 3 ]
-              python_version_minor: [ 9 ]
+              python_version_minor: [ "9" ]
           name: "func-s_standalone_gpu-win-py<<matrix.python_version_major>><<matrix.python_version_minor>>"
           toxenv: "standalone-gpu-py<<matrix.python_version_major>><<matrix.python_version_minor>>"
           parallelism: 2
