--- a/mypy.ini
+++ b/mypy.ini
@@ -447,3 +447,6 @@ ignore_missing_imports = True
 
 [mypy-setproctitle.*]
 ignore_missing_imports = True
+
+[mypy-wandb.vendor.*]
+ignore_missing_imports = True
