build(sdk): update mypy extension for protobuf type checking

--- a/tox.ini
+++ b/tox.ini
@@ -136,11 +136,12 @@ whitelist_externals =
     diff
 deps =
     -r{toxinidir}/requirements.txt
-    mypy-protobuf>=3.3.0
+    protocheck3: mypy-protobuf==3.3.0
     protocheck3: grpcio==1.46.3
     protocheck3: grpcio-tools==1.46.3
-    protocheck4: grpcio==1.49.1
-    protocheck4: grpcio-tools==1.49.1
+    protocheck4: mypy-protobuf==3.4.0
+    protocheck4: grpcio==1.50.0
+    protocheck4: grpcio-tools==1.50.0
 changedir={toxinidir}/wandb/proto
 commands=
     rm -rf {toxinidir}/wandb/proto_check/
@@ -155,11 +156,12 @@ basepython=python3
 skip_install = false
 deps =
     -r{toxinidir}/requirements.txt
-    mypy-protobuf>=3.3.0
+    proto3: mypy-protobuf==3.3.0
     proto3: grpcio==1.46.3
     proto3: grpcio-tools==1.46.3
-    proto4: grpcio==1.49.1
-    proto4: grpcio-tools==1.49.1
+    proto4: mypy-protobuf==3.4.0
+    proto4: grpcio==1.50.0
+    proto4: grpcio-tools==1.50.0
 changedir={toxinidir}/wandb/proto
 commands=
     proto{3,4}: python wandb_internal_codegen.py
